# Nexus-the-programming-language

./: CHANGELOG.md  CMakeLists.txt  LICENSE  PROJECT_STRUCTURE.md  README.md  SYNTAX.md  docs.html  index.html  interpreter.cpp  interpreter.js  ultra_test.nx
Nexus-Studio/: index.html
Samples/: browser.nx  calculator.nx  file_manager.nx  guessing_game.nx  system_monitor.nx  text_analyzer.nx  todo.nx  v3_showcase.nx
Samples/tests/: README.md  import.nx  test.nx  test_5000_features.nx  test_advanced_drawing.nx  test_js_wayland.nx  test_upgrades.nx  test_web_interactive.nx
libs/: README.md  http_client.nx  json_db.nx  nx_suite.nx  py_suite.py  utils.nx
libs/src/: EnterpriseLib.java  README.md  performance_bits.asm  rust_engine.rs
nexus-vscode/: README.md  build.nx  nexus-titan-support-2.0.0.vsix  package.json
nexus-vscode/syntaxes/: nexus.tmLanguage.json
nexus-vscode/themes/: nexus-titan-theme.json
src/: common.cpp  common.h  embedded_libs.h  gui.cpp  gui.h  gui_dialogs.cpp  gui_win32.cpp  html.cpp  html.h  interpreter_core.cpp  interpreter_core.h  main.cpp  networking.cpp  networking.h  parser.cpp  stdlib.h  stdlib_basic.cpp  stdlib_gui.cpp  stdlib_io.cpp
tests/: api_demo.nx
v1/: interpreter.cpp  interpreter.py
v2/: README.md  interpreter.c  interpreter.cpp  interpreter.py  interpreter_macos.cpp
v3/: README.md  interpreter.c  interpreter.cpp  interpreter.py  interpreter_macos.cpp
v3/rust-interpreter/: Cargo.toml  README.md
v4/: README.md  interpreter.py
v4/libs/: README.md  ai_helper.py  fs.nx  logger.nx  net_utils.py  system_monitor.py
(+8 files in other folders)
